client/assets/styles/scss/modals/modals-edit.scss
.modal-edit {
  max-width: 900px;
  min-height: 360px;
  transition: max-width .3s ease-in-out;
  width: 100%;

  @include media(md) {
    max-width: 810px;
  }

  @include media(sm) {
    max-width: 720px;
  }

  &.ace-active {

    @include media(xxl) {
      max-width: 1800px;
    }

    @include media(xl) {
      max-width: 1600px;
    }

    @include media(lg) {
      max-width: 1200px;
    }
  }

  // css override for server building state
  &.disabled {
    cursor: not-allowed !important;

    .ace-container,
    .btn:not(.btn-cancel),
    .container-title-wrapper,
    .input,
    .label,
    .textarea,
    .tr,
    .table-actions {
      @extend %no-touching;
      opacity: .6 !important;
    }
  }

  // nav
  .modal-header {
    overflow: hidden; // for animation on tabs
    padding: 0; // reset default header padding
  }

  // header button
  .btn-title {
    color: $gray;
    display: table;
    height: $input-xs;
    margin: 9px auto 3px;

    // status
    .icons-status {
      float: left;
      margin: 8px 6px 0 0;
    }

    // text
    .btn-text {
      float: left;
      font-size: 15px;
      height: $input-xs;
      line-height: $input-xs;
    }

    .icons-gear {
      margin-left: 6px;
      width: 15px;
    }

    .icons-arrow-down {
      height: $input-xs;
      width: 18px;
    }
  }

  // forms
  // package input
  .input-prefix-monospace {

    &::after {
      color: $gray;
    }

    > .input {
      padding-left: 140px; // padding for prefix apt-get install
    }
  }

  // ports
  .textarea {
    display: block;
    max-height: 150px;
    min-height: 90px;
    overflow-y: auto;
    resize: vertical;

    .btn {
      border-width: 1px;
      flex: 0 0 auto;
      margin-right: 6px;
    }

    .input-port {
      color: $gray-dark;
      font-size: 13px;
      font-weight: 500;
      height: 18px;
      min-width: 9px;

      &:focus {
        outline: 0;
      }
    }
  }

  // replace
  .cell.monospace {
    position: relative;

    &.cell-arrow:nth-child(2) {
      padding-right: 15px;

      &.disabled::after {
        color: $orange;
      }

      &::after {
        color: $green;
        content: '→';
        display: block;
        font-size: 18px;
        line-height: 34px;
        position: absolute;
        right: 0;
        top: 0;
      }
    }
  }

  .table + .clearfix {
    border-top: 1px solid $gray-lighter;
    margin-top: 27px;
    padding-top: 21px;
  }

  // ace container
  .ace-container {
    position: relative;

    // translation rules
    &.ace-ignored-files {
      border-radius: 3px;
      min-height: 210px;
    }

    .spinner-wrapper {
      position: absolute;
    }
  }

  // logs
  .log-wrapper {
    border-radius: 3px;
    border-style: solid;
    border-width: 2px;
    padding: 0;
    position: relative;

    .build-log {
      z-index: auto; // reset
    }
  }

  .views-toolbar-wrapper {

    + .log-wrapper {
      border-radius: 0 0 3px 3px;
      border-top: 0;
    }

    .views-toolbar {
      border-bottom-width: 1px;
      border-left: 0;
      border-radius: 3px 3px 0 0;
      border-right: 0;
      border-style: solid;
      border-top: 0;
    }
  }

  // footer save/save & build button
  .modal-footer > .green {
    overflow: hidden;
    text-align: left;
    transition: width .15s ease-in-out;
    white-space: nowrap;

    &.text-next {
      padding-right: 6px;
      width: 88px;
    }

    &.text-save {
      width: 75px;
    }

    &.text-save-build {
      padding-right: 9px;
      width: 180px;
    }

    // speed up animation for & build
    .fade {
      transition: opacity .3s ease-in-out;

      // don't combine these
      &.ng-enter {
        opacity: 0;
      }

      &.ng-enter-active {
        opacity: 1;
      }

      &.ng-leave {
        opacity: 1;
      }

      &.ng-leave-active {
        opacity: 0;
      }
    }

    .icons-log {
      margin-left: 9px;
    }

    .icons-arrow-forward {
      left: -3px;
    }
  }
}

// full screen mode
.modal-backdrop.full-screen {
  padding: 0;

  .modal-dialog {
    border: 0;
    max-width: none;
  }

  .modal-form {
    height: 100vh;
    left: 0;
    padding: 0;
    position: fixed;
    top: 0;
    width: 100vw;
    z-index: $z-modal;
  }
}

// stack button
.btn-group-stacks {
  display: flex;
  margin-bottom: 15px;
  margin-left: -1px; // line up with version button

  @media (max-width: 836px) { // ~sm so that recommended text can fit with a small amount of padding
    flex-wrap: wrap;
  }

  @include media(xs) {
    margin-left: 0; // reset
    margin-top: 21px; // height of "recommended" label
  }

  > .btn {
    border-color: $gray-lighter;
    flex: 1 1 auto;
    font-size: 14px;
    height: 90px;
    line-height: normal; // reset
    padding: 0;

    // styles for 3x2
    @media (max-width: 836px) {
      flex: 1 1 33.33%;
      font-size: 13px;

      &:first-child {
        border-radius: $input-border-radius 0 0;
      }

      &:nth-child(3):nth-child(3) { // override btn-group default
        border-radius: 0 $input-border-radius 0 0;
      }

      &:nth-child(4):nth-child(4) { // override btn-group default
        border-radius: 0 0 0 $input-border-radius;
        margin-left: 0;
      }

      &:last-child {
        border-radius: 0 0 $input-border-radius;
        margin-right: 0;
      }

      &:nth-child(n+4) {
        margin-top: -2px;
      }
    }

    &.recommended {

      &::after {
        background: $gray-lighter;
        border-radius: $input-border-radius;
        color: $gray-dark;
        content: 'Recommended';
        display: block;
        font-size: 11px;
        height: 21px;
        left: -2px;
        line-height: 20px;
        position: absolute;
        right: -2px;
        top: -21px;
      }

      &:hover::after {
        background: $gray-light;
      }

      &.active,
      &:active {

        &::after {
          background: $purple-light;
          color: $white;
        }
      }
    }

    .iconnables {
      height: 24px;
      margin: 9px auto 6px;
      width: 24px;
    }

    // radio input
    .input-radio {
      bottom: 12px;
      left: 0;
      margin: 0 auto;
      position: absolute;
      right: 0;
    }
  }
}

// modal-logs
.modal-logs {
  flex: 1 1 0;
}

